[package]
name = "crx-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
strum = { version = "0.25.0", features = ["derive"] }
